Removed Files, fixed various items
Removed exess files in css and js folders, fixed the footer overlapping
with page content and fixed head importing files in the wrong order

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+body {
+    padding-bottom: 70px;
+}
 .navbar {
     margin-bottom: 0 !important;
 }
